fix alignment

--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -1,5 +1,4 @@
 .avatar {
-  width: 200px;
+  width: 320px;
   border-radius: 50%;
-  margin-right: 24px;
 }
