--- a/source/stylesheets/components/_wrapper.scss
+++ b/source/stylesheets/components/_wrapper.scss
@@ -7,6 +7,13 @@ body{
   margin: 0, auto;
   padding: 58px;
   font-family: 'Quicksand', sans-serif;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  margin: 0 auto;
+  min-height: calc(100vh - 10rem - 30.4rem);
 }
 
 .wrapper .myname{
@@ -22,4 +29,21 @@ body{
   font-size: 3rem;
   font-weight: 500;
   margin-bottom: 16px;
+}
+
+.wrapper-about{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  margin: 0 auto;
+  // min-height: calc(100vh - 10rem - 30.4rem);
+}
+
+.wrapper-projects{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+
 }
